--- a/index.html
+++ b/index.html
@@ -1,1 +1,51 @@
+<!DOCTYPE html>
+<html lang="pl">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Nasza Szkółka</title>
+    <link rel="stylesheet" href="styles.css">
+</head>
+<body>
+    <header>
+        <h1>Witamy w naszej szkółce!</h1>
+        <nav>
+            <ul>
+                <li><a href="#about">O nas</a></li>
+                <li><a href="#prices">Ceny</a></li>
+                <li><a href="#form">Zapisz się na lekcję próbną</a></li>
+            </ul>
+        </nav>
+    </header>
+
+    <section id="about">
+        <h2>O nas</h2>
+        <p>Nasza szkółka oferuje profesjonalne lekcje dla dzieci i dorosłych...</p>
+    </section>
+
+    <section id="prices">
+        <h2>Ceny</h2>
+        <ul>
+            <li>Lekcja indywidualna: 100 PLN</li>
+            <li>Pakiet 10 lekcji: 900 PLN</li>
+        </ul>
+    </section>
+
+    <section id="form">
+        <h2>Zapisz się na lekcję próbną</h2>
+        <form action="#" method="post">
+            <label for="name">Imię:</label>
+            <input type="text" id="name" name="name" required>
+            <label for="email">Email:</label>
+            <input type="email" id="email" name="email" required>
+            <button type="submit">Zapisz się</button>
+        </form>
+    </section>
+
+    <footer>
+        <p>&copy; 2024 Nasza Szkółka. Wszelkie prawa zastrzeżone.</p>
+    </footer>
+    <script src="script.js"></script>
+</body>
+</html>
 
