--- a/index.html
+++ b/index.html
@@ -3,49 +3,45 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Nasza Szkółka</title>
+    <title>SpeakEdo - Strona Główna</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <header>
-        <h1>Witamy w naszej szkółce!</h1>
+        <img src="logo.png" alt="Logo SpeakEdo" id="logo">
         <nav>
             <ul>
-                <li><a href="#about">O nas</a></li>
-                <li><a href="#prices">Ceny</a></li>
-                <li><a href="#form">Zapisz się na lekcję próbną</a></li>
+                <li><a href="#">Strona Główna</a></li>
+                <li><a href="#">O Nas</a></li>
+                <li><a href="#">Cennik</a></li>
+                <li><a href="#">Kontakt</a></li>
             </ul>
         </nav>
     </header>
 
-    <section id="about">
-        <h2>O nas</h2>
-        <p>Nasza szkółka oferuje profesjonalne lekcje dla dzieci i dorosłych...</p>
-    </section>
+    <main>
+        <section id="hero">
+            <h1>Witaj w SpeakEdo</h1>
+            <p>Twoje miejsce do nauki języka angielskiego.</p>
+            <a href="#kontakt" class="cta-button">Zapisz się na lekcję próbną</a>
+        </section>
 
-    <section id="prices">
-        <h2>Ceny</h2>
-        <ul>
-            <li>Lekcja indywidualna: 100 PLN</li>
-            <li>Pakiet 10 lekcji: 900 PLN</li>
-        </ul>
-    </section>
+        <section id="about">
+            <h2>O Nas</h2>
+            <p>W SpeakEdo oferujemy najwyższej jakości zajęcia z języka angielskiego, dostosowane do indywidualnych potrzeb każdego ucznia.</p>
+        </section>
 
-    <section id="form">
-        <h2>Zapisz się na lekcję próbną</h2>
-        <form action="#" method="post">
-            <label for="name">Imię:</label>
-            <input type="text" id="name" name="name" required>
-            <label for="email">Email:</label>
-            <input type="email" id="email" name="email" required>
-            <button type="submit">Zapisz się</button>
-        </form>
-    </section>
+        <section id="pricing">
+            <h2>Cennik</h2>
+            <p>Sprawdź nasze konkurencyjne ceny i pakiety dostosowane do Twoich potrzeb.</p>
+        </section>
+    </main>
 
     <footer>
-        <p>&copy; 2024 Nasza Szkółka. Wszelkie prawa zastrzeżone.</p>
+        <p>© 2024 SpeakEdo. Wszelkie prawa zastrzeżone.</p>
+        <p><a href="mailto:kontakt@speakedo.pl">kontakt@speakedo.pl</a></p>
     </footer>
-    <script src="script.js"></script>
 </body>
 </html>
+
 
