--- a/index.html
+++ b/index.html
@@ -21,9 +21,9 @@
 
     <main>
         <section id="hero">
-            <h1>Witaj w SpeakEdo</h1>
-            <p>Twoje miejsce do nauki języka angielskiego.</p>
-            <a href="#kontakt" class="cta-button">Zapisz się na lekcję próbną</a>
+            <h1>Ucz się języków razem z nami!</h1>
+            <p>Efektywna, oryginalna i przyjemna nauka dla każdego</p>
+            <a href="#kontakt" class="cta-button">Wypróbuj za darmo</a>
         </section>
 
         <section id="about">
