--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         </section>
 
         <section id="about">
-
+            <img src="kobietaSG.jpg" alt="kobietaSG zdj" id="kobietaSG">
         </section>
 
         <section id="pricing">
