--- a/index.html
+++ b/index.html
@@ -21,13 +21,14 @@
 
     <main>
         <section id="hero">
-            <h1>Ucz się języków razem z nami!</h1>
-            <p>Efektywna, oryginalna i przyjemna nauka dla każdego</p>
-            <a href="#kontakt" class="cta-button">Wypróbuj za darmo</a>
+            <h1>Witaj w SpeakEdo</h1>
+            <p>Twoje miejsce do nauki języka angielskiego.</p>
+            <a href="#kontakt" class="cta-button">Zapisz się na lekcję próbną</a>
         </section>
 
         <section id="about">
-            <img src="kobietaSG.jpg" alt="kobietaSG zdj" id="kobietaSG">
+            <h2>O Nas</h2>
+            <p>W SpeakEdo oferujemy najwyższej jakości zajęcia z języka angielskiego, dostosowane do indywidualnych potrzeb każdego ucznia.</p>
         </section>
 
         <section id="pricing">
