--- a/index.html
+++ b/index.html
@@ -20,19 +20,44 @@
     </header>
 
     <main>
+        <!-- Sekcja Hero -->
         <section id="hero">
-            <h1>Witaj w SpeakEdo</h1>
-            <p>Twoje miejsce do nauki języka angielskiego.</p>
-            <a href="#kontakt" class="cta-button">Zapisz się na lekcję próbną</a>
+            <div class="container">
+                <div class="text">
+                    <h1>Ucz się angielskiego z SpeakEdo</h1>
+                    <p>Najlepszy sposób na szybkie i efektywne nauki języka angielskiego.</p>
+                    <a href="#kontakt" class="cta-button">Zapisz się na lekcję próbną</a>
+                </div>
+                <div class="image">
+                    <img src="hero-image.png" alt="Nauka angielskiego">
+                </div>
+            </div>
         </section>
 
+        <!-- Sekcja o nas -->
         <section id="about">
-            <img src="kobietaSG.jpg" alt="kobietaSG" id="kobietaSG">
+            <div class="container">
+                <div class="text">
+                    <h2>O Nas</h2>
+                    <p>W SpeakEdo oferujemy zajęcia dostosowane do Twoich potrzeb. Dołącz do nas i osiągnij swoje cele językowe z łatwością.</p>
+                </div>
+                <div class="image">
+                    <img src="about-image.png" alt="O Nas">
+                </div>
+            </div>
         </section>
 
+        <!-- Sekcja cennik -->
         <section id="pricing">
-            <h2>Cennik</h2>
-            <p>Sprawdź nasze konkurencyjne ceny i pakiety dostosowane do Twoich potrzeb.</p>
+            <div class="container">
+                <div class="text">
+                    <h2>Cennik</h2>
+                    <p>Oferujemy różne pakiety cenowe, które pasują do Twoich potrzeb. Sprawdź naszą ofertę!</p>
+                </div>
+                <div class="image">
+                    <img src="pricing-image.png" alt="Cennik">
+                </div>
+            </div>
         </section>
     </main>
 
@@ -42,5 +67,3 @@
     </footer>
 </body>
 </html>
-
-
