--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                     <a href="#kontakt" class="cta-button">Zapisz się na lekcję próbną</a>
                 </div>
                 <div class="image">
-                    <img src="hero-image.png" alt="Nauka angielskiego">
+                    <img src="hero-image.jpg" alt="Nauka angielskiego">
                 </div>
             </div>
         </section>
@@ -42,7 +42,7 @@
                     <p>W SpeakEdo oferujemy zajęcia dostosowane do Twoich potrzeb. Dołącz do nas i osiągnij swoje cele językowe z łatwością.</p>
                 </div>
                 <div class="image">
-                    <img src="about-image.png" alt="O Nas">
+                    <img src="about-image.jpg" alt="O Nas">
                 </div>
             </div>
         </section>
@@ -55,7 +55,7 @@
                     <p>Oferujemy różne pakiety cenowe, które pasują do Twoich potrzeb. Sprawdź naszą ofertę!</p>
                 </div>
                 <div class="image">
-                    <img src="pricing-image.png" alt="Cennik">
+                    <img src="pricing-image.jpg" alt="Cennik">
                 </div>
             </div>
         </section>
