--- a/index.html
+++ b/index.html
@@ -21,18 +21,18 @@
 
     <main>
         <!-- Sekcja Hero -->
-        <section id="hero">
-            <div class="container">
-                <div class="text">
-                    <h1>Ucz się angielskiego z SpeakEdo</h1>
-                    <p>Najlepszy sposób na szybkie i efektywne nauki języka angielskiego.</p>
-                    <a href="#kontakt" class="cta-button">Zapisz się na lekcję próbną</a>
-                </div>
-                <div class="image">
-                    <img src="hero-image.jpg" alt="Nauka angielskiego">
-                </div>
-            </div>
-        </section>
+<section id="hero">
+    <div class="hero-container">
+        <div class="hero-text">
+            <h1>Ucz się angielskiego z SpeakEdo</h1>
+            <p>Najlepszy sposób na szybkie i efektywne nauki języka angielskiego.</p>
+            <a href="#kontakt" class="cta-button">Zapisz się na lekcję próbną</a>
+        </div>
+        <div class="hero-image">
+            <img src="hero-image.jpg" alt="Nauka angielskiego">
+        </div>
+    </div>
+</section>
 
         <!-- Sekcja o nas -->
         <section id="about">
