--- a/index.html
+++ b/index.html
@@ -7,29 +7,27 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <header>
-        <img src="logo.png" alt="Logo SpeakEdo" id="logo">
-        <nav>
-            <ul>
-                <li><a href="#">Strona Główna</a></li>
-                <li><a href="#">O Nas</a></li>
-                <li><a href="#">Cennik</a></li>
-                <li><a href="#">Kontakt</a></li>
-            </ul>
-        </nav>
-    </header>
-
-    <main>
-        <!-- Sekcja Hero -->
-<section id="hero">
-    <div class="hero-container">
-        <div class="hero-text">
-            <h1>Ucz się angielskiego z SpeakEdo</h1>
-            <p>Najlepszy sposób na szybkie i efektywne nauki języka angielskiego.</p>
-            <a href="#kontakt" class="cta-button">Zapisz się na lekcję próbną</a>
-        </div>
-        <div class="hero-image">
-            <img src="hero-image.jpg" alt="Nauka angielskiego">
+    <div id="hero">
+        <header>
+            <img src="logo.png" alt="Logo SpeakEdo" id="logo">
+            <nav>
+                <ul>
+                    <li><a href="#">Strona Główna</a></li>
+                    <li><a href="#">O Nas</a></li>
+                    <li><a href="#">Cennik</a></li>
+                    <li><a href="#">Kontakt</a></li>
+                </ul>
+            </nav>
+        </header>
+        <div class="hero-container">
+            <div class="hero-text">
+                <h1>Ucz się angielskiego z SpeakEdo</h1>
+                <p>Najlepszy sposób na szybkie i efektywne nauki języka angielskiego.</p>
+                <a href="#kontakt" class="cta-button">Zapisz się na lekcję próbną</a>
+            </div>
+            <div class="hero-image">
+                <img src="hero-image.png" alt="Nauka angielskiego">
+            </div>
         </div>
     </div>
 </section>
