--- a/index.html
+++ b/index.html
@@ -3,65 +3,51 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>SpeakEdo - Strona Główna</title>
-    <link rel="stylesheet" href="styles.css">
+    <title>SpeakEdo - Nauka języka angielskiego</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div id="hero">
-        <header>
-            <img src="logo.png" alt="Logo SpeakEdo" id="logo">
-            <nav>
-                <ul>
-                    <li><a href="#">Strona Główna</a></li>
-                    <li><a href="#">O Nas</a></li>
-                    <li><a href="#">Cennik</a></li>
-                    <li><a href="#">Kontakt</a></li>
-                </ul>
-            </nav>
-        </header>
-        <div class="hero-container">
-            <div class="hero-text">
-                <h1>Ucz się angielskiego z SpeakEdo</h1>
-                <p>Najlepszy sposób na szybkie i efektywne nauki języka angielskiego.</p>
-                <a href="#kontakt" class="cta-button">Zapisz się na lekcję próbną</a>
+    <header>
+        <div class="container">
+            <h1>Witaj w SpeakEdo</h1>
+            <p>Twoja droga do płynnej znajomości języka angielskiego</p>
+            <a href="#courses" class="btn-primary">Zobacz kursy</a>
+        </div>
+    </header>
+
+    <section id="about">
+        <div class="container">
+            <h2>O nas</h2>
+            <p>SpeakEdo to interaktywna platforma do nauki języka angielskiego, zaprojektowana, aby pomóc Ci w zdobyciu umiejętności językowych szybko i efektywnie.</p>
+        </div>
+    </section>
+
+    <section id="courses">
+        <div class="container">
+            <h2>Nasze kursy</h2>
+            <div class="course">
+                <img src="example-image.jpg" alt="Obrazek kursu">
+                <div class="course-info">
+                    <h3>Kurs dla początkujących</h3>
+                    <p>Rozpocznij swoją przygodę z językiem angielskim od podstaw.</p>
+                    <a href="#" class="btn-secondary">Dowiedz się więcej</a>
+                </div>
             </div>
-            <div class="hero-image">
-                <img src="hero-image.png" alt="Nauka angielskiego">
+            <div class="course">
+                <img src="example-image.jpg" alt="Obrazek kursu">
+                <div class="course-info">
+                    <h3>Kurs zaawansowany</h3>
+                    <p>Doskonal swoje umiejętności językowe na poziomie zaawansowanym.</p>
+                    <a href="#" class="btn-secondary">Dowiedz się więcej</a>
+                </div>
             </div>
         </div>
-    </div>
-</section>
-
-        <!-- Sekcja o nas -->
-        <section id="about">
-            <div class="container">
-                <div class="text">
-                    <h2>O Nas</h2>
-                    <p>W SpeakEdo oferujemy zajęcia dostosowane do Twoich potrzeb. Dołącz do nas i osiągnij swoje cele językowe z łatwością.</p>
-                </div>
-                <div class="image">
-                    <img src="about-image.jpg" alt="O Nas">
-                </div>
-            </div>
-        </section>
-
-        <!-- Sekcja cennik -->
-        <section id="pricing">
-            <div class="container">
-                <div class="text">
-                    <h2>Cennik</h2>
-                    <p>Oferujemy różne pakiety cenowe, które pasują do Twoich potrzeb. Sprawdź naszą ofertę!</p>
-                </div>
-                <div class="image">
-                    <img src="pricing-image.jpg" alt="Cennik">
-                </div>
-            </div>
-        </section>
-    </main>
+    </section>
 
     <footer>
-        <p>© 2024 SpeakEdo. Wszelkie prawa zastrzeżone.</p>
-        <p><a href="mailto:kontakt@speakedo.pl">kontakt@speakedo.pl</a></p>
+        <div class="container">
+            <p>&copy; 2024 SpeakEdo. Wszelkie prawa zastrzeżone.</p>
+        </div>
     </footer>
 </body>
 </html>
