--- a/index.html
+++ b/index.html
@@ -3,51 +3,43 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>SpeakEdo - Nauka języka angielskiego</title>
-    <link rel="stylesheet" href="style.css">
+    <title>SpeakEdo - Strona Główna</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <header>
-        <div class="container">
-            <h1>Witaj w SpeakEdo</h1>
-            <p>Twoja droga do płynnej znajomości języka angielskiego</p>
-            <a href="#courses" class="btn-primary">Zobacz kursy</a>
-        </div>
+        <img src="logo.png" alt="Logo SpeakEdo" id="logo">
+        <nav>
+            <ul>
+                <li><a href="#">Strona Główna</a></li>
+                <li><a href="#">O Nas</a></li>
+                <li><a href="#">Cennik</a></li>
+                <li><a href="#">Kontakt</a></li>
+            </ul>
+        </nav>
     </header>
 
-    <section id="about">
-        <div class="container">
-            <h2>O nas</h2>
-            <p>SpeakEdo to interaktywna platforma do nauki języka angielskiego, zaprojektowana, aby pomóc Ci w zdobyciu umiejętności językowych szybko i efektywnie.</p>
-        </div>
-    </section>
+    <main>
+        <section id="hero">
+            <h1>Witaj w SpeakEdo</h1>
+            <p>Twoje miejsce do nauki języka angielskiego.</p>
+            <a href="#kontakt" class="cta-button">Zapisz się na lekcję próbną</a>
+        </section>
 
-    <section id="courses">
-        <div class="container">
-            <h2>Nasze kursy</h2>
-            <div class="course">
-                <img src="example-image.jpg" alt="Obrazek kursu">
-                <div class="course-info">
-                    <h3>Kurs dla początkujących</h3>
-                    <p>Rozpocznij swoją przygodę z językiem angielskim od podstaw.</p>
-                    <a href="#" class="btn-secondary">Dowiedz się więcej</a>
-                </div>
-            </div>
-            <div class="course">
-                <img src="example-image.jpg" alt="Obrazek kursu">
-                <div class="course-info">
-                    <h3>Kurs zaawansowany</h3>
-                    <p>Doskonal swoje umiejętności językowe na poziomie zaawansowanym.</p>
-                    <a href="#" class="btn-secondary">Dowiedz się więcej</a>
-                </div>
-            </div>
-        </div>
-    </section>
+        <section id="about">
+            <h2>O Nas</h2>
+            <p>W SpeakEdo oferujemy najwyższej jakości zajęcia z języka angielskiego, dostosowane do indywidualnych potrzeb każdego ucznia.</p>
+        </section>
+
+        <section id="pricing">
+            <h2>Cennik</h2>
+            <p>Sprawdź nasze konkurencyjne ceny i pakiety dostosowane do Twoich potrzeb.</p>
+        </section>
+    </main>
 
     <footer>
-        <div class="container">
-            <p>&copy; 2024 SpeakEdo. Wszelkie prawa zastrzeżone.</p>
-        </div>
+        <p>© 2024 SpeakEdo. Wszelkie prawa zastrzeżone.</p>
+        <p><a href="mailto:kontakt@speakedo.pl">kontakt@speakedo.pl</a></p>
     </footer>
 </body>
 </html>
