--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
 
     <main>
         <section id="hero">
+            <img src="hero-image.jpg" alt="Kobieta hero-image" id="kobieta">
             <h1>Witaj w SpeakEdo</h1>
             <p>Twoje miejsce do nauki języka angielskiego.</p>
             <a href="#kontakt" class="cta-button">Zapisz się na lekcję próbną</a>
