--- a/index.html
+++ b/index.html
@@ -21,10 +21,14 @@
 
     <main>
         <section id="hero">
-            <img src="hero-image.jpg" alt="Kobieta hero-image" id="kobieta">
-            <h1>Witaj w SpeakEdo</h1>
-            <p>Twoje miejsce do nauki języka angielskiego.</p>
-            <a href="#kontakt" class="cta-button">Zapisz się na lekcję próbną</a>
+            <div class="hero-content">
+                <h1>Witaj w SpeakEdo</h1>
+                <p>Twoje miejsce do nauki języka angielskiego.</p>
+                <a href="#kontakt" class="cta-button">Zapisz się na lekcję próbną</a>
+            </div>
+            <div class="hero-image">
+                <img src="hero-image.jpg" alt="Kobieta hero-image" id="kobieta">
+            </div>
         </section>
 
         <section id="about">
