--- a/index.html
+++ b/index.html
@@ -22,14 +22,15 @@
     <main>
         <section id="hero">
             <div class="hero-content">
-                <h1>Witaj w SpeakEdo</h1>
+                <h1>Witaj w Speak<span class="black-text">Edo</span></h1>
                 <p>Twoje miejsce do nauki języka angielskiego.</p>
                 <a href="#kontakt" class="cta-button">Zapisz się na lekcję próbną</a>
-            </div>
+        </div>
             <div class="hero-image">
-                <img src="hero-image.jpg" alt="Kobieta hero-image" id="kobieta">
-            </div>
-        </section>
+        <img src="hero-image.jpg" alt="Kobieta hero-image" id="kobieta">
+    </div>
+</section>
+
 
         <section id="about">
             <h2>O Nas</h2>
