--- a/index.html
+++ b/index.html
@@ -22,9 +22,9 @@
     <main>
         <section id="hero">
             <div class="hero-content">
-                <h1>Witaj w Speak<span class="black-text">Edo</span></h1>
-                <p>Twoje miejsce do nauki języka angielskiego.</p>
-                <a href="#kontakt" class="cta-button">Zapisz się na lekcję próbną</a>
+                <h1>Ucz się języków razem z nami!</h1>
+                <p>Efektywna, oryginalna i przyjemna nauka dla każdego</p>
+                <a href="#kontakt" class="cta-button">Wypróbuj za darmo</a>
         </div>
             <div class="hero-image">
         <img src="hero-image.jpg" alt="Kobieta hero-image" id="kobieta">
