--- a/index.html
+++ b/index.html
@@ -32,15 +32,10 @@
 </section>
 
 
-        <section id="about">
-            <h2>O Nas</h2>
-            <p>W SpeakEdo oferujemy najwyższej jakości zajęcia z języka angielskiego, dostosowane do indywidualnych potrzeb każdego ucznia.</p>
+        <section id="kursy">
+            
         </section>
-
-        <section id="pricing">
-            <h2>Cennik</h2>
-            <p>Sprawdź nasze konkurencyjne ceny i pakiety dostosowane do Twoich potrzeb.</p>
-        </section>
+        
     </main>
 
     <footer>
