--- a/index.html
+++ b/index.html
@@ -31,10 +31,37 @@
     </div>
 </section>
 
-
-        <section id="kursy">
-            <h2>Test</h2>
-        </section>
+<section id="course-section">
+    <h2>Kurs językowy dla Ciebie</h2>
+    <div class="course-cards">
+        <div class="card">
+            <img src="path_to_english_flag_image" alt="Angielski">
+            <p>Angielski</p>
+        </div>
+        <div class="card">
+            <img src="path_to_german_flag_image" alt="Niemiecki">
+            <p>Niemiecki</p>
+        </div>
+        <div class="card">
+            <img src="path_to_spanish_flag_image" alt="Hiszpański">
+            <p>Hiszpański</p>
+        </div>
+        <div class="card">
+            <img src="path_to_italian_flag_image" alt="Włoski">
+            <p>Włoski</p>
+        </div>
+        <div class="card">
+            <img src="path_to_french_flag_image" alt="Francuski">
+            <p>Francuski</p>
+        </div>
+    </div>
+    <p class="course-description">
+        Z eTutorem uczysz się wtedy, kiedy masz na to ochotę. Bez nauczyciela, bez stresu i bez przepadających zajęć. 
+        Postaw na kurs, który zmotywuje Cię do działania i dostosuje się do Twoich potrzeb – to Ty decydujesz o celach 
+        i tempie swojej nauki.
+    </p>
+    <a href="#" class="cta-button">Załóż konto</a>
+</section>
         
     </main>
 
