--- a/index.html
+++ b/index.html
@@ -32,35 +32,22 @@
 </section>
 
 <section id="course-section">
-    <h2>Kurs językowy dla Ciebie</h2>
+    <h2>Oferujemy:</h2>
     <div class="course-cards">
         <div class="card">
-            <img src="path_to_english_flag_image" alt="Angielski">
-            <p>Angielski</p>
-        </div>
-        <div class="card">
-            <img src="path_to_german_flag_image" alt="Niemiecki">
-            <p>Niemiecki</p>
-        </div>
-        <div class="card">
             <img src="path_to_spanish_flag_image" alt="Hiszpański">
-            <p>Hiszpański</p>
-        </div>
-        <div class="card">
-            <img src="path_to_italian_flag_image" alt="Włoski">
-            <p>Włoski</p>
-        </div>
-        <div class="card">
-            <img src="path_to_french_flag_image" alt="Francuski">
-            <p>Francuski</p>
+            <p>Angielski</p>
         </div>
     </div>
     <p class="course-description">
-        Z eTutorem uczysz się wtedy, kiedy masz na to ochotę. Bez nauczyciela, bez stresu i bez przepadających zajęć. 
-        Postaw na kurs, który zmotywuje Cię do działania i dostosuje się do Twoich potrzeb – to Ty decydujesz o celach 
-        i tempie swojej nauki.
+        W SpeakEdo uczysz się z najlepszymi nauczycielami, którzy są native speakerami z dużym doświadczeniem w pracy z polskimi uczniami.
+        Nasi lektorzy są cierpliwi, wyrozumiali i dbają o Twój komfort podczas nauki.
+        Dzięki temu zdobywasz wiedzę bez stresu, a rezultaty są imponujące.
+        Oferujemy również unikalne wydarzenia językowe, które symulują prawdziwe sytuacje za granicą.
+        To doskonała okazja, by sprawdzić swoje umiejętności w praktyce, porozmawiać z innymi uczącymi się i czerpać wiedzę od różnych nauczycieli.
+        Wybierz SpeakEdo i ucz się angielskiego w przyjaznej atmosferze z najlepszymi!
     </p>
-    <a href="#" class="cta-button">Załóż konto</a>
+    <a href="#" class="cta-button">Wypróbuj za darmo</a>
 </section>
         
     </main>
