--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
     <h2>Oferujemy:</h2>
     <div class="course-cards">
         <div class="card">
-            <img src="path_to_spanish_flag_image" alt="Hiszpański">
+            <img src="anglia.png" alt="Hiszpański">
             <p>Angielski</p>
         </div>
     </div>
