--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 <section id="course-section">
     <h2>Oferujemy:</h2>
     <div class="course-cards">
-        <div class="card">
+        <a href="link_do_twojej_strony" class="card">
             <img src="anglia.png" alt="Hiszpański">
             <p>Angielski</p>
         </div>
