--- a/index.html
+++ b/index.html
@@ -34,10 +34,10 @@
 <section id="course-section">
     <h2>Oferujemy:</h2>
     <div class="course-cards">
-        <a href="link_do_twojej_strony" class="card">
-            <img src="anglia.png" alt="Hiszpański">
+        <a href="link_do_angielskiego" class="card">
+            <img src="anglia.png" alt="Angielski">
             <p>Angielski</p>
-        </div>
+        </a>
     </div>
     <p class="course-description">
         W SpeakEdo uczysz się z najlepszymi nauczycielami, którzy są native speakerami z dużym doświadczeniem w pracy z polskimi uczniami.
