--- a/index.html
+++ b/index.html
@@ -49,6 +49,26 @@
     </p>
     <a href="#" class="cta-button">Wypróbuj za darmo</a>
 </section>
+
+<section id="why-speakedo">
+    <h2>Najlepszy sposób na naukę języka</h2>
+    <p>SpeakEdo to platforma, która uczy języka, a nie tylko słówek. Wystarczy Ci dostęp do internetu i 15 minut dziennie, a wszystkie potrzebne narzędzia znajdziesz w naszym kursie online – zawsze pod ręką. Poczuj radość z nauki!</p>
+    <div class="features-container">
+        <div class="feature">
+            <h3>Krótkie lekcje</h3>
+            <p>W ciągu 15 minut poznajesz gramatykę, słówka i wykonujesz multimedialne ćwiczenia.</p>
+        </div>
+        <div class="feature">
+            <h3>Inteligentne powtórki</h3>
+            <p>Dobierasz plan powtórek dla siebie. System bada, które słowa sprawiają Ci trudność i pomaga je zapamiętać szybciej i skuteczniej.</p>
+        </div>
+        <div class="feature">
+            <h3>Gry językowe</h3>
+            <p>Z pomocą gier przyswajasz nowe i utrwalasz wcześniej poznane słownictwo, a wyniki możesz porównać z innymi użytkownikami.</p>
+        </div>
+    </div>
+</section>
+
         
     </main>
 
