--- a/index.html
+++ b/index.html
@@ -51,25 +51,32 @@
 </section>
 
 <section id="why-speakedo">
-    <h2>Najlepszy sposób na naukę języka</h2>
-    <p>SpeakEdo to platforma, która uczy języka, a nie tylko słówek. Wystarczy Ci dostęp do internetu i 15 minut dziennie, a wszystkie potrzebne narzędzia znajdziesz w naszym kursie online – zawsze pod ręką. Poczuj radość z nauki!</p>
+    <h2>O nas</h2>
+    <p>SpeakEdo to szkoła językowa, która stawia na jakość nauki i przystępność cen. Nasze lekcje prowadzone są przez doświadczonych nauczycieli, którzy z pasją przekazują wiedzę, dbając o każdy szczegół.
+        Dzięki nam nauczysz się nie tylko słówek, ale przede wszystkim swobodnej komunikacji. Wystarczy dostęp do internetu, a już po kilku minutach dziennie zaczniesz widzieć postępy.
+        Z nami masz pewność, że nauka jest efektywna i przyjemna. Dołącz do SpeakEdo i odkryj, jak łatwo i szybko możesz osiągnąć swoje językowe cele!</p>
     <div class="features-container">
         <div class="feature">
-            <h3>Krótkie lekcje</h3>
-            <p>W ciągu 15 minut poznajesz gramatykę, słówka i wykonujesz multimedialne ćwiczenia.</p>
+            <h3>Wydarzenia językowe</h3>
+            <p>"Wydarzenia językowe to unikalna okazja, aby zanurzyć się w realnych sytuacjach i ćwiczyć język w praktyce.
+                Nasi nauczyciele wcielą się w różne role, na przykład kasjera za granicą, a Twoim zadaniem będzie skuteczna komunikacja w grupie z innymi uczniami.
+                Oprócz tego będziesz mieć możliwość swobodnych rozmów po angielsku z innymi uczestnikami. To idealna okazja, aby poznać nowych ludzi, zdobyć cenne doświadczenie językowe i przełamać bariery w mówieniu.
+                Wydarzenia językowe są opcjonalne i dostępne w jednym z naszych specjalnych pakietów."</p>
         </div>
         <div class="feature">
-            <h3>Inteligentne powtórki</h3>
-            <p>Dobierasz plan powtórek dla siebie. System bada, które słowa sprawiają Ci trudność i pomaga je zapamiętać szybciej i skuteczniej.</p>
+            <h3>Oferta dopasowana do każdego</h3>
+            <p>W SpeakEdo oferujemy różnorodne rodzaje lekcji, aby każdy mógł znaleźć coś idealnie dopasowanego do swoich potrzeb.
+               Czy wolisz zajęcia online z wideo i dźwiękiem, czy lekcje tekstowe – mamy coś dla Ciebie! Dodatkowo, nasze lekcje są dostosowywane tak, aby jak najlepiej odpowiadały Twoim oczekiwaniom i stylowi nauki.
+               Zależy nam na Twoim sukcesie, dlatego robimy wszystko, abyś był w pełni zadowolony z każdej chwili spędzonej na nauce z nami.</p>
         </div>
         <div class="feature">
-            <h3>Gry językowe</h3>
-            <p>Z pomocą gier przyswajasz nowe i utrwalasz wcześniej poznane słownictwo, a wyniki możesz porównać z innymi użytkownikami.</p>
+            <h3>Dostęp do duolingo premium</h3>
+            <p>"Oprócz naszych lekcji dajemy również dostęp do Duolingo Premium!
+                Dzięki temu możesz cieszyć się nieograniczoną ilością serc, brakiem reklam i innymi korzyściami, a to wszystko dzięki stworzeniu wspólnej klasy w Duolingo."</p>
         </div>
     </div>
 </section>
-
-        
+       
     </main>
 
     <footer>
