--- a/index.html
+++ b/index.html
@@ -58,10 +58,10 @@
     <div class="features-container">
         <div class="feature">
             <h3>Wydarzenia językowe</h3>
-            <p>"Wydarzenia językowe to unikalna okazja, aby zanurzyć się w realnych sytuacjach i ćwiczyć język w praktyce.
+            <p>Wydarzenia językowe to unikalna okazja, aby zanurzyć się w realnych sytuacjach i ćwiczyć język w praktyce.
                 Nasi nauczyciele wcielą się w różne role, na przykład kasjera za granicą, a Twoim zadaniem będzie skuteczna komunikacja w grupie z innymi uczniami.
                 Oprócz tego będziesz mieć możliwość swobodnych rozmów po angielsku z innymi uczestnikami. To idealna okazja, aby poznać nowych ludzi, zdobyć cenne doświadczenie językowe i przełamać bariery w mówieniu.
-                Wydarzenia językowe są opcjonalne i dostępne w jednym z naszych specjalnych pakietów."</p>
+                Wydarzenia językowe są opcjonalne i dostępne w jednym z naszych specjalnych pakietów.</p>
         </div>
         <div class="feature">
             <h3>Oferta dopasowana do każdego</h3>
@@ -71,8 +71,8 @@
         </div>
         <div class="feature">
             <h3>Dostęp do duolingo premium</h3>
-            <p>"Oprócz naszych lekcji dajemy również dostęp do Duolingo Premium!
-                Dzięki temu możesz cieszyć się nieograniczoną ilością serc, brakiem reklam i innymi korzyściami, a to wszystko dzięki stworzeniu wspólnej klasy w Duolingo."</p>
+            <p>Oprócz naszych lekcji dajemy również dostęp do Duolingo Premium!
+                Dzięki temu możesz cieszyć się nieograniczoną ilością serc, brakiem reklam i innymi korzyściami, a to wszystko dzięki stworzeniu wspólnej klasy w Duolingo.</p>
         </div>
     </div>
 </section>
