--- a/index.html
+++ b/index.html
@@ -74,6 +74,11 @@
             <p>Oprócz naszych lekcji dajemy również dostęp do Duolingo Premium!
                 Dzięki temu możesz cieszyć się nieograniczoną ilością serc, brakiem reklam i innymi korzyściami, a to wszystko dzięki stworzeniu wspólnej klasy w Duolingo.</p>
         </div>
+        <div class="feature">
+            <h3>Indywidualne podejście</h3>
+            <p>W SpeakEdo stawiamy na indywidualne podejście do każdego ucznia. Nasi nauczyciele analizują Twoje potrzeby, mocne strony i cele, a następnie dostosowują program nauki tak, abyś mógł osiągnąć maksymalne postępy.
+                Dzięki temu masz pewność, że Twój rozwój językowy jest optymalny i skuteczny. Tworzymy dla Ciebie spersonalizowany plan nauki, który pozwala na szybkie i trwałe efekty.</p>
+        </div>
     </div>
 </section>
        
