--- a/index.html
+++ b/index.html
@@ -75,9 +75,10 @@
                 Dzięki temu możesz cieszyć się nieograniczoną ilością serc, brakiem reklam i innymi korzyściami, a to wszystko dzięki stworzeniu wspólnej klasy w Duolingo.</p>
         </div>
         <div class="feature">
-            <h3>Indywidualne podejście</h3>
-            <p>W SpeakEdo stawiamy na indywidualne podejście do każdego ucznia. Nasi nauczyciele analizują Twoje potrzeby, mocne strony i cele, a następnie dostosowują program nauki tak, abyś mógł osiągnąć maksymalne postępy.
-                Dzięki temu masz pewność, że Twój rozwój językowy jest optymalny i skuteczny. Tworzymy dla Ciebie spersonalizowany plan nauki, który pozwala na szybkie i trwałe efekty.</p>
+            <h3>Lekcje dla każdego</h3>
+            <p>W SpeakEdo nasze lekcje są dostosowane do osób w każdym wieku – od dzieci i młodzieży po dorosłych i seniorów.
+               Niezależnie od tego, czy uczysz się dla przyjemności, czy przygotowujesz się do ważnych egzaminów, takich jak ósmoklasista, matura czy certyfikaty językowe, nasze zajęcia są tu, aby Ci pomóc.
+               Każdy znajdzie coś dla siebie, a my zadbamy o to, aby Twoje potrzeby edukacyjne były w pełni zaspokojone.</p>
         </div>
     </div>
 </section>
