--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             <div class="hero-content">
                 <h1>Ucz się języków razem z nami!</h1>
                 <p>Efektywna, oryginalna i przyjemna nauka dla każdego</p>
-                <a href="#kontakt" class="cta-button">Wypróbuj za darmo</a>
+                <a href="#kontakt" class="cta-button">Sprawdź oferte</a>
         </div>
             <div class="hero-image">
         <img src="hero-image.jpg" alt="Kobieta hero-image" id="kobieta">
