--- a/index.html
+++ b/index.html
@@ -82,6 +82,35 @@
         </div>
     </div>
 </section>
+
+<section id="testimonials">
+    <h2>Zobacz, jakie opinie o szkole językowej Edoo mają jej uczniowie</h2>
+    <div class="testimonial-slider">
+        <button class="slider-btn prev">&#8249;</button>
+        <div class="testimonial-container">
+            <div class="testimonial">
+                <p>Kursy niemieckiego online w Edoo to świetne rozwiązanie dla osób, którym brakuje motywacji do nauki. Zaczęłam od siebie, a teraz w Edoo również uczą się moje dzieci.</p>
+                <p><a href="#">(więcej...)</a></p>
+                <p>Ewa, matka trójki dzieci</p>
+                <p>Źródło: edoo.pl</p>
+            </div>
+            <div class="testimonial">
+                <p>Dzięki Edoo zdobyłam wymarzoną pracę! Wcześniej zaliczałam przeróżne kursy języka angielskiego, jednak dopiero z Edoo poczułam, że mój poziom angielskiego poprawił się znacząco.</p>
+                <p><a href="#">(więcej...)</a></p>
+                <p>Basia, pracownik działu HR</p>
+                <p>Źródło: edoo.pl</p>
+            </div>
+            <div class="testimonial">
+                <p>Edoo było dla mnie ogromnym wsparciem i mogę nawet powiedzieć, że rozrywką, zwłaszcza w okresie pandemii. Kursy angielskiego z lektorem online były świetną formą nauki.</p>
+                <p><a href="#">(więcej...)</a></p>
+                <p>Arek, pracownik korporacji</p>
+                <p>Źródło: edoo.pl</p>
+            </div>
+        </div>
+        <button class="slider-btn next">&#8250;</button>
+    </div>
+</section>
+
        
     </main>
 
