--- a/index.html
+++ b/index.html
@@ -19,86 +19,105 @@
         </nav>
     </header>
 
-    <section id="hero">
-        <div class="hero-content">
-            <h1>SpeakEdo - Mów jak native!</h1>
-            <p>Dołącz do naszej społeczności i ucz się języka angielskiego w praktyczny sposób.</p>
-            <a href="#course-section" class="cta-button">Zapisz się na lekcję próbną</a>
+    <main>
+        <section id="hero">
+            <div class="hero-content">
+                <h1>Ucz się języków razem z nami!</h1>
+                <p>Efektywna, oryginalna i przyjemna nauka dla każdego</p>
+                <a href="#kontakt" class="cta-button">Sprawdź oferte</a>
         </div>
-        <div class="hero-image">
-            <img src="hero_image.jpg" alt="Uczniowie na zajęciach">
-        </div>
-    </section>
+            <div class="hero-image">
+        <img src="hero-image.jpg" alt="Kobieta hero-image" id="kobieta">
+    </div>
+</section>
 
-    <section id="course-section">
-        <h2>Nasze Kursy</h2>
-        <div class="course-cards">
-            <a href="#" class="card">
-                <img src="icon1.png" alt="Ikona 1">
-                <p>Kurs Konwersacyjny</p>
-            </a>
-            <a href="#" class="card">
-                <img src="icon2.png" alt="Ikona 2">
-                <p>Kurs Intensywny</p>
-            </a>
-            <a href="#" class="card">
-                <img src="icon3.png" alt="Ikona 3">
-                <p>Kurs dla Początkujących</p>
-            </a>
-        </div>
-        <p class="course-description">Niezależnie od Twojego poziomu znajomości języka, znajdziesz u nas coś dla siebie. Oferujemy szeroką gamę kursów dostosowanych do Twoich potrzeb.</p>
-    </section>
+<section id="course-section">
+    <h2>Oferujemy:</h2>
+    <div class="course-cards">
+        <a href="link_do_angielskiego" class="card">
+            <img src="anglia.png" alt="Angielski">
+            <p>Angielski</p>
+        </a>
+    </div>
+    <p class="course-description">
+        W SpeakEdo uczysz się z najlepszymi nauczycielami, którzy są native speakerami z dużym doświadczeniem w pracy z polskimi uczniami.
+        Nasi lektorzy są cierpliwi, wyrozumiali i dbają o Twój komfort podczas nauki.
+        Dzięki temu zdobywasz wiedzę bez stresu, a rezultaty są imponujące.
+        Oferujemy również unikalne wydarzenia językowe, które symulują prawdziwe sytuacje za granicą.
+        To doskonała okazja, by sprawdzić swoje umiejętności w praktyce, porozmawiać z innymi uczącymi się i czerpać wiedzę od różnych nauczycieli.
+        Wybierz SpeakEdo i ucz się angielskiego w przyjaznej atmosferze z najlepszymi!
+    </p>
+    <a href="#" class="cta-button">Wypróbuj za darmo</a>
+</section>
 
-    <section id="why-speakedo">
-        <h2>Dlaczego SpeakEdo?</h2>
-        <p>Oferujemy wyjątkowe podejście do nauki języka angielskiego, które pozwala na szybkie osiągnięcie płynności w mowie. Nasze zajęcia są prowadzone przez doświadczonych lektorów z naciskiem na praktyczną naukę.</p>
-        <div class="features-container">
-            <div class="feature">
-                <h3>Doświadczeni Lektorzy</h3>
-                <p>Nasza kadra to specjaliści z wieloletnim doświadczeniem.</p>
-            </div>
-            <div class="feature">
-                <h3>Elastyczne Godziny</h3>
-                <p>Dopasuj godziny zajęć do swojego grafiku.</p>
-            </div>
-            <div class="feature">
-                <h3>Indywidualne Podejście</h3>
-                <p>Ucz się w tempie dostosowanym do Twoich potrzeb.</p>
-            </div>
-            <div class="feature">
-                <h3>Praktyczne Lekcje</h3>
-                <p>Skupiamy się na tym, co naprawdę jest potrzebne w codziennej komunikacji.</p>
-            </div>
+<section id="why-speakedo">
+    <h2>O nas</h2>
+    <p>SpeakEdo to szkoła językowa, która stawia na jakość nauki i przystępność cen. Nasze lekcje prowadzone są przez doświadczonych nauczycieli, którzy z pasją przekazują wiedzę, dbając o każdy szczegół.
+        Dzięki nam nauczysz się nie tylko słówek, ale przede wszystkim swobodnej komunikacji. Wystarczy dostęp do internetu, a już po kilku minutach dziennie zaczniesz widzieć postępy.
+        Z nami masz pewność, że nauka jest efektywna i przyjemna. Dołącz do SpeakEdo i odkryj, jak łatwo i szybko możesz osiągnąć swoje językowe cele!</p>
+    <div class="features-container">
+        <div class="feature">
+            <h3>Wydarzenia językowe</h3>
+            <p>Wydarzenia językowe to unikalna okazja, aby zanurzyć się w realnych sytuacjach i ćwiczyć język w praktyce.
+                Nasi nauczyciele wcielą się w różne role, na przykład kasjera za granicą, a Twoim zadaniem będzie skuteczna komunikacja w grupie z innymi uczniami.
+                Oprócz tego będziesz mieć możliwość swobodnych rozmów po angielsku z innymi uczestnikami. To idealna okazja, aby poznać nowych ludzi, zdobyć cenne doświadczenie językowe i przełamać bariery w mówieniu.
+                Wydarzenia językowe są opcjonalne i dostępne w jednym z naszych specjalnych pakietów.</p>
         </div>
-    </section>
+        <div class="feature">
+            <h3>Oferta dopasowana do każdego</h3>
+            <p>W SpeakEdo oferujemy różnorodne rodzaje lekcji, aby każdy mógł znaleźć coś idealnie dopasowanego do swoich potrzeb.
+               Czy wolisz zajęcia online z wideo i dźwiękiem, czy lekcje tekstowe – mamy coś dla Ciebie! Dodatkowo, nasze lekcje są dostosowywane tak, aby jak najlepiej odpowiadały Twoim oczekiwaniom i stylowi nauki.
+               Zależy nam na Twoim sukcesie, dlatego robimy wszystko, abyś był w pełni zadowolony z każdej chwili spędzonej na nauce z nami.</p>
+        </div>
+        <div class="feature">
+            <h3>Dostęp do duolingo premium</h3>
+            <p>Oprócz naszych lekcji dajemy również dostęp do Duolingo Premium!
+                Dzięki temu możesz cieszyć się nieograniczoną ilością serc, brakiem reklam i innymi korzyściami, a to wszystko dzięki stworzeniu wspólnej klasy w Duolingo.</p>
+        </div>
+        <div class="feature">
+            <h3>Lekcje dla każdego</h3>
+            <p>W SpeakEdo nasze lekcje są dostosowane do osób w każdym wieku – od dzieci i młodzieży po dorosłych i seniorów.
+               Niezależnie od tego, czy uczysz się dla przyjemności, czy przygotowujesz się do ważnych egzaminów, takich jak ósmoklasista, matura czy certyfikaty językowe, nasze zajęcia są tu, aby Ci pomóc.
+               Każdy znajdzie coś dla siebie, a my zadbamy o to, aby Twoje potrzeby edukacyjne były w pełni zaspokojone.</p>
+        </div>
+    </div>
+</section>
 
-    <section id="testimonials">
-        <h2>Co mówią nasi uczniowie?</h2>
-        <div class="testimonial-slider">
-            <div class="testimonial-container">
-                <div class="testimonial">
-                    <p>"Zajęcia w SpeakEdo to najlepsza decyzja jaką mogłem podjąć. Czuję się pewniej mówiąc po angielsku."</p>
-                    <p>- Jan</p>
-                </div>
-                <div class="testimonial">
-                    <p>"Lektorzy są bardzo cierpliwi i potrafią wytłumaczyć wszystko w zrozumiały sposób. Polecam!"</p>
-                    <p>- Anna</p>
-                </div>
-                <div class="testimonial">
-                    <p>"Elastyczne godziny zajęć są dla mnie idealne. Mogę uczyć się nawet późnym wieczorem."</p>
-                    <p>- Marek</p>
-                </div>
+<section id="testimonials">
+    <h2>Zobacz, jakie opinie o szkole językowej Edoo mają jej uczniowie</h2>
+    <div class="testimonial-slider">
+        <button class="slider-btn prev">&#8249;</button>
+        <div class="testimonial-container">
+            <div class="testimonial">
+                <p>Kursy niemieckiego online w Edoo to świetne rozwiązanie dla osób, którym brakuje motywacji do nauki. Zaczęłam od siebie, a teraz w Edoo również uczą się moje dzieci.</p>
+                <p>Ewa, matka trójki dzieci</p>
+                <p>Źródło: edoo.pl</p>
             </div>
-            <button class="slider-btn prev">&lt;</button>
-            <button class="slider-btn next">&gt;</button>
+            <div class="testimonial">
+                <p>Dzięki Edoo zdobyłam wymarzoną pracę! Wcześniej zaliczałam przeróżne kursy języka angielskiego, jednak dopiero z Edoo poczułam, że mój poziom angielskiego poprawił się znacząco.</p>
+                <p>Basia, pracownik działu HR</p>
+                <p>Źródło: edoo.pl</p>
+            </div>
+            <div class="testimonial">
+                <p>Edoo było dla mnie ogromnym wsparciem i mogę nawet powiedzieć, że rozrywką, zwłaszcza w okresie pandemii. Kursy angielskiego z lektorem online były świetną formą nauki.</p>
+                <p>Arek, pracownik korporacji</p>
+                <p>Źródło: edoo.pl</p>
+            </div>
         </div>
-    </section>
+        <button class="slider-btn next">&#8250;</button>
+    </div>
+</section>
+
+
+       
+    </main>
 
     <footer>
-        <p>&copy; 2024 SpeakEdo. Wszelkie prawa zastrzeżone.</p>
+        <p>© 2024 SpeakEdo. Wszelkie prawa zastrzeżone.</p>
+        <p><a href="mailto:kontakt@speakedo.pl">kontakt@speakedo.pl</a></p>
     </footer>
-
-    <script src="script.js"></script>
+    
+        <script src="script.js"></script>
 </body>
 </html>
 
