--- a/index.html
+++ b/index.html
@@ -84,32 +84,33 @@
 </section>
 
 <section id="testimonials">
-    <h2>Zobacz, jakie opinie o szkole językowej Edoo mają jej uczniowie</h2>
+    <h2>Nasze opinie na temat naszych lekcji</h2>
     <div class="testimonial-slider">
         <button class="slider-btn prev">&#8249;</button>
         <div class="testimonial-container">
             <div class="testimonial">
-                <p>Kursy niemieckiego online w Edoo to świetne rozwiązanie dla osób, którym brakuje motywacji do nauki. Zaczęłam od siebie, a teraz w Edoo również uczą się moje dzieci.</p>
-                <p>Ewa, matka trójki dzieci</p>
-                <p>Źródło: edoo.pl</p>
+                <p>"Dostałam ofertę od GN Group! Prawie podwójne wynagrodzenie, przyjęłam ofertę jako Partner ds. Pozyskiwania Talentów! Dzięki za ogromną pomoc i wsparcie, Joe!" </p>
+                <p>Joe jest jednym z nauczycieli Native Speaker</p>
+                <p>Anna</p>
             </div>
             <div class="testimonial">
-                <p>Dzięki Edoo zdobyłam wymarzoną pracę! Wcześniej zaliczałam przeróżne kursy języka angielskiego, jednak dopiero z Edoo poczułam, że mój poziom angielskiego poprawił się znacząco.</p>
-                <p>Basia, pracownik działu HR</p>
-                <p>Źródło: edoo.pl</p>
+                <p>"Jeśli chodzi o lekcje to jestem bardzo mile zaskoczona.
+                   Pan Joe jest świetny! Bardzo wesoły, komunikatywny, podoba mi się sposób prowadzenia zajęć. Praktyczne rzeczy ale z poczuciem humoru."</p>
+                <p>Joe jest jednym z nauczycieli Native Speaker</p>
+                <p>Kamila</p>
             </div>
             <div class="testimonial">
-                <p>Edoo było dla mnie ogromnym wsparciem i mogę nawet powiedzieć, że rozrywką, zwłaszcza w okresie pandemii. Kursy angielskiego z lektorem online były świetną formą nauki.</p>
-                <p>Arek, pracownik korporacji</p>
-                <p>Źródło: edoo.pl</p>
+                <p>"Po trzech miesiącach nauki mogę śmiało powiedzieć, że lekcje były doskonałe.
+                   Nauczyciel skutecznie dostosowywał materiały do moich potrzeb, a praktyczne ćwiczenia były bardzo pomocne.
+                   Jestem bardzo zadowolony z postępów i zdecydowanie polecam."</p>
+                <p>Jan</p>
+                <p></p>
             </div>
         </div>
         <button class="slider-btn next">&#8250;</button>
     </div>
 </section>
-
-
-       
+        
     </main>
 
     <footer>
