--- a/index.html
+++ b/index.html
@@ -115,64 +115,36 @@
     <div class="footer-container">
         <div class="footer-column">
             <h3>Biuro Obsługi Klienta</h3>
-            <p>Pomoc</p>
-            <p>795 95 95 90 (w dni robocze 9:00-17:00)</p>
-            <p>pomoc@etutor.pl</p>
-            <p>Dla firm</p>
-            <p>firmy@etutor.pl</p>
+            <p>Masz pytania?</p>
+            <p>+48 793 303 668 (w dni robocze 9:00-17:00)</p>
+            <p>speakedo.contact@gmail.com</p>
         </div>
         <div class="footer-column">
-            <h3>Kursy eTutor</h3>
+            <h3>Kursy</h3>
             <ul>
-                <li>Kurs angielskiego</li>
-                <li>Kurs niemieckiego</li>
-                <li>Kurs hiszpańskiego</li>
-                <li>Kurs włoskiego</li>
-                <li>Kurs francuskiego</li>
-                <li>Business English</li>
-                <li>Travel English</li>
-                <li>Matura z angielskiego</li>
-                <li>Курс польської мови</li>
-                <li>Basic Polish</li>
+                <li>Kursy angielskiego</li>
             </ul>
         </div>
         <div class="footer-column">
-            <h3>O produkcie</h3>
+            <h3>Informacje</h3>
             <ul>
-                <li>Opinie</li>
                 <li>Cennik</li>
-                <li>Karta podarunkowa</li>
-                <li>Blog</li>
-                <li>Dla firm</li>
                 <li>O nas</li>
-            </ul>
-            <h3>Polecane</h3>
-            <ul>
-                <li>Słownik Diki</li>
-                <li>BeCorrect</li>
             </ul>
         </div>
         <div class="footer-column">
             <h3>Centrum pomocy</h3>
             <ul>
                 <li>Kontakt</li>
-                <li>Pomoc</li>
-                <li>Rozwiąż problem</li>
-                <li>Regulamin</li>
-                <li>Polityka prywatności</li>
+                <li>Pytania</li>
             </ul>
-        </div>
-        <div class="footer-column">
-            <h3>Aplikacja</h3>
         </div>
     </div>
     <div class="footer-social">
         <p>Social Media</p>
         <div class="social-icons">
-            <a href="#"><img src="youtube-icon.png" alt="YouTube"></a>
             <a href="#"><img src="facebook-icon.png" alt="Facebook"></a>
             <a href="#"><img src="instagram-icon.png" alt="Instagram"></a>
-            <a href="#"><img src="linkedin-icon.png" alt="LinkedIn"></a>
             <a href="#"><img src="tiktok-icon.png" alt="TikTok"></a>
         </div>
     </div>
