--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
         <div class="footer-column">
             <h3>Kursy</h3>
             <ul>
-                <li>Kursy angielskiego</li>
+                <li>Angielski</li>
             </ul>
         </div>
         <div class="footer-column">
